@@ -2,7 +2,6 @@ package org.advent.year2021.day3;
 
 import org.advent.common.Utils;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
 
@@ -10,10 +9,7 @@ public class Day3 {
 	
 	public static void main(String[] args) {
 		Scanner input = Utils.scanFileNearClass(Day3.class, "input.txt");
-		List<String> numbers = new ArrayList<>();
-		while (input.hasNext()) {
-			numbers.add(input.nextLine());
-		}
+		List<String> numbers = Utils.readLines(input);
 		
 		System.out.println("Answer 1: " + part1(numbers));
 		System.out.println("Answer 2: " + part2(numbers));
@@ -22,7 +18,7 @@ public class Day3 {
 	private static int part1(List<String> numbers) {
 		int gamma = 0;
 		int epsilon = 0;
-		for (int i = 0; i < numbers.get(0).length(); i++) {
+		for (int i = 0; i < numbers.getFirst().length(); i++) {
 			int mostCommon = mostCommon(numbers, i);
 			gamma = gamma * 2 + mostCommon;
 			epsilon = epsilon * 2 + 1 - mostCommon;
@@ -36,7 +32,7 @@ public class Day3 {
 	
 	private static int oxygen(List<String> numbers) {
 		int oxygen = 0;
-		for (int i = 0; i < numbers.get(0).length(); i++) {
+		for (int i = 0; i < numbers.getFirst().length(); i++) {
 			int index = i;
 			int mostCommon = mostCommon(numbers, i);
 			oxygen = oxygen * 2 + mostCommon;
@@ -47,9 +43,9 @@ public class Day3 {
 	
 	private static int co2(List<String> numbers) {
 		int oxygen = 0;
-		for (int i = 0; i < numbers.get(0).length(); i++) {
+		for (int i = 0; i < numbers.getFirst().length(); i++) {
 			if (numbers.size() == 1)
-				return Integer.parseInt(numbers.get(0), 2);
+				return Integer.parseInt(numbers.getFirst(), 2);
 			
 			int index = i;
 			int leastCommon = 1 - mostCommon(numbers, i);
