@@ -1,93 +1,83 @@
 package org.advent.year2022.day5;
 
-import org.apache.commons.lang3.StringUtils;
 import org.advent.common.Utils;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class Day5 {
 	
-	@SuppressWarnings("unchecked")
 	public static void main(String[] args) {
 		Scanner input = Utils.scanFileNearClass(Day5.class,"input.txt");
-		Stack<String>[] stacks = null;
 		
+		List<Stack<String>> stacks = new ArrayList<>();
 		while (input.hasNext()) {
 			String line = input.nextLine();
 			if (line.isEmpty())
 				break;
-			if (stacks == null) {
-				stacks = (Stack<String>[]) new Stack[(line.length() + 1) / 4];
-				for (int i = 0; i < stacks.length; i++)
-					stacks[i] = new Stack<>();
+			if (stacks.isEmpty()) {
+				int count = (line.length() + 1) / 4;
+				while (count > 0) {
+					stacks.add(new Stack<>());
+					count--;
+				}
 			}
-			int stackNumber = 0;
-			while (true) {
-				String crate = line.substring(1, 2);
+			
+			int index = 0;
+			for (Stack<String> stack : stacks) {
+				String crate = line.substring(index * 4 + 1, index * 4 + 2);
 				if (StringUtils.isNumeric(crate))
 					break;
 				if (!crate.isBlank())
-					stacks[stackNumber].addBottom(crate);
-				line = line.substring(3);
-				if (line.isEmpty())
-					break;
-				line = line.substring(1);
-				stackNumber++;
+					stack.addBottom(crate);
+				index++;
 			}
 		}
 		
-		for (Stack<String> stack : stacks) {
-			System.out.println(stack.toString());
-		}
+		List<Move> moves = new ArrayList<>();
+		while (input.hasNext())
+			moves.add(Move.parse(input.nextLine()));
 		
-		Pattern pattern = Pattern.compile("move (\\d+) from (\\d+) to (\\d+)");
-		while (input.hasNext()) {
-			Matcher matcher = pattern.matcher(input.nextLine());
-			if (matcher.find()) {
-				System.out.println(matcher.group());
-				int count = Integer.parseInt(matcher.group(1));
-				int from = Integer.parseInt(matcher.group(2)) - 1;
-				int to = Integer.parseInt(matcher.group(3)) - 1;
-//				stacks[from].moveTo(stacks[to], count);
-				stacks[from].moveToOrdered(stacks[to], count);
-			}
-		}
-		
-		for (Stack<String> stack : stacks) {
-			System.out.println(stack.toString());
-		}
-		
-		System.out.println(Stream.of(stacks).map(Stack::getTop).collect(Collectors.joining()));
+		System.out.println("Answer 1: " + part1(stacks, moves));
+		System.out.println("Answer 2: " + part2(stacks, moves));
+	}
+	
+	private static String part1(List<Stack<String>> stacks, List<Move> moves) {
+		stacks = stacks.stream().map(Stack::copy).toList();
+		for (Move move : moves)
+			stacks.get(move.from()).moveTo(stacks.get(move.to()), move.count());
+		return stacks.stream().map(Stack::getTop).collect(Collectors.joining());
+	}
+	
+	private static String part2(List<Stack<String>> stacks, List<Move> moves) {
+		stacks = stacks.stream().map(Stack::copy).toList();
+		for (Move move : moves)
+			stacks.get(move.from()).moveToOrdered(stacks.get(move.to()), move.count());
+		return stacks.stream().map(Stack::getTop).collect(Collectors.joining());
 	}
 	
 	static class Stack<T> {
-		private List<T> elements = new ArrayList<>();
+		private final List<T> elements = new ArrayList<>();
 		
 		void add(T element) {
 			elements.add(element);
 		}
 		
-		void addAll(Collection<T> elements) {
-			elements.addAll(elements);
-		}
-		
 		void addBottom(T element) {
-			elements.add(0, element);
+			elements.addFirst(element);
 		}
 		
 		T removeTop() {
-			return elements.remove(size() - 1);
+			return elements.removeLast();
 		}
 		
 		T getTop() {
-			return elements.get(size() - 1);
+			return elements.getLast();
 		}
 		
 		void moveTo(Stack<T> other, int count) {
@@ -104,13 +94,31 @@ public class Day5 {
 			temp.moveTo(other, count);
 		}
 		
-		int size() {
-			return elements.size();
+		Stack<T> copy() {
+			Stack<T> copy = new Stack<>();
+			copy.elements.addAll(elements);
+			return copy;
 		}
 		
 		@Override
 		public String toString() {
 			return elements.toString();
+		}
+	}
+	
+	record Move(int count, int from, int to) {
+		
+		static Pattern pattern = Pattern.compile("move (\\d+) from (\\d+) to (\\d+)");
+		
+		static Move parse(String line) {
+			Matcher matcher = pattern.matcher(line);
+			if (!matcher.find())
+				throw new RuntimeException("Invalid move: " + line);
+			
+			int count = Integer.parseInt(matcher.group(1));
+			int from = Integer.parseInt(matcher.group(2)) - 1;
+			int to = Integer.parseInt(matcher.group(3)) - 1;
+			return new Move(count, from, to);
 		}
 	}
 }
